--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Berries</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
 </head>
 
@@ -24,5 +25,10 @@
     <h2>Berries, berries, oh my!</h2>
     <p>In everyday English, “berry” is a term for any <b>small edible fruit.</b> These “berries” are usually <b>juicy, round, brightly coloured</b>, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
   </main>
+
+  <footer>
+    <p>© Berries.</p>
+  </footer>
+
 </body>
 </html>
