--- a/blueberries.html
+++ b/blueberries.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Berries</title>
+  <title>Blueberries Berries</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
@@ -16,14 +16,17 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="blueberries.html">Blueberries</a></li>
         <li><a href="grapes.html">Grapes</a></li>
-        <li><a href="red-currants.html">Red Currants</a></li>
+        <li><a href="red-currant.html">Red Currants</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <h2>Berries, berries, oh my!</h2>
-    <p>In everyday English, “berry” is a term for any <b>small edible fruit.</b> These “berries” are usually <b>juicy, round, brightly coloured</b>, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
+    <h2>Blueberries</h2>
+    <figure>
+      <img src="images/blueberries.jpg">
+    </figure>
+    <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
   </main>
 
   <footer>
