--- a/grapes.html
+++ b/grapes.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Berries</title>
+  <title>Grapes Berries</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
@@ -22,8 +22,11 @@
   </header>
 
   <main>
-    <h2>Berries, berries, oh my!</h2>
-    <p>In everyday English, “berry” is a term for any <b>small edible fruit.</b> These “berries” are usually <b>juicy, round, brightly coloured</b>, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
+    <h2>Grapes</h2>
+    <figure>
+      <img src="images/grapes.jpg">
+    </figure>
+    <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
   </main>
 
   <footer>
