--- a/red-currants.html
+++ b/red-currants.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Berries</title>
+  <title>Red Currants Berries</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
@@ -22,8 +22,11 @@
   </header>
 
   <main>
-    <h2>Berries, berries, oh my!</h2>
-    <p>In everyday English, “berry” is a term for any <b>small edible fruit.</b> These “berries” are usually <b>juicy, round, brightly coloured</b>, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
+    <h2>Red Currant</h2>
+    <figure>
+      <img src="images/red-currants.jpg">
+    </figure>
+    <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
   </main>
 
   <footer>
