added nightlight navigation

--- a/blueberries.html
+++ b/blueberries.html
@@ -14,7 +14,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="blueberries.html">Blueberries</a></li>
+        <li><a class="current" href="blueberries.html">Blueberries</a></li>
         <li><a href="grapes.html">Grapes</a></li>
         <li><a href="red-currant.html">Red Currants</a></li>
       </ul>
@@ -30,7 +30,7 @@
   </main>
 
   <footer>
-    <p>© Berries.</p>
+    <p><small>© Berries.</small></p>
   </footer>
 
 </body>
